--- a/index.html
+++ b/index.html
@@ -7,89 +7,177 @@
   </head>
   <body>
     <header class="page-header wrapper">
-      <h1 class="visually-hidden">Интернет магазин техники Device</h1>
-      <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
+      <div class="page-header-wrapper">
+        <h1 class="visually-hidden">Интернет магазин техники Device</h1>
+        <img class="logo" src="images/logo-device.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
 
-      <div class="navigation">
-        <div class="navigation-section">
-          <div class="navigation-section-item">
-            <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="search" type="search" name="search">
-              <img class="icons" src="images/icons-loupe.svg" width="16px" height="16px">
-              <button class="find-button" type="submit">Найти</button>
-            </form>
-            <div class="navigation-top-section-enter">
-              <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
-              <a class="navigation-user-link" href="#">Войти</a>
+        <div class="navigation">
+          <div class="navigation-section">
+            <div class="navigation-section-item">
+              <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+                <img class="icons" src="images/icons-loupe.svg" width="16px" height="16px">
+                <input class="search" placeholder="Текст поиска" type="search" name="search">
+                <button class="find-button" type="submit">Найти</button>
+              </form>
+              <div class="navigation-top-section-enter">
+                <img class="icons" src="images/icons-user.svg" width="13px" height="12px">
+                <a class="navigation-user-link" href="#">Войти</a>
+              </div>
+            </div>
+
+            <div class="navigation-section-item">
+              <div>
+                <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
+                <a class="navigation-user-link" href="#">Сравнить</a>
+              </div>
+
+              <div>
+                <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
+                <a class="navigation-user-link" href="#">Корзина</a>
+              </div>
             </div>
           </div>
 
-          <div class="navigation-section-item">
-            <div>
-              <img class="icons" src="images/icons-compare.svg" width="10px" height="12px">
-              <a class="navigation-user-link" href="#">Сравнить</a>
+          <nav class="navigation-section">
+            <div class="navigation-section-item">
+              <a class="navigation-link" href="catalog.html">Каталог товаров</a>
+              <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
             </div>
 
-            <div>
-              <img class="icons" src="images/icons-basket.svg" width="16px" height="14px">
-              <a class="navigation-user-link" href="#">Корзина</a>
-            </div>
-          </div>
+            <ul class="navigation-section-item navigation-section-wide">
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">Доставка</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">Гарантия</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">Контакты</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-
-        <nav class="navigation-section">
-          <div class="navigation-section-item">
-            <a class="navigation-link" href="catalog.html">Каталог товаров</a>
-            <img class="plus" src="images/icons-batton-plus.svg" width="50px" height="50px">
-          </div>
-
-          <ul class="navigation-section-item navigation-section-wide">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Доставка</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Гарантия</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
       </div>
     </header>
 
 
-    <main class="main-container main-index">
+    <main class="main-container">
       <section class="slider wrapper">
         <!-- СТРЕЛКИ -->
-        <div class="slider first-slide">
+        <div class="slider-item slider-item-active">
           <div class="slider-img">
             <!-- <img src="images/icons-arrow-left.svg" width="20px" height="60px"> -->
             <img src="images/slider-quadrocopter.png" width="560px" height="560px" alt="Квадракоптер с мощным лазером">
             <!-- <img src="images/icons-arrow-right.svg" width="20px" height="60px"> -->
           </div>
-          <div>
-            <span class="slider-number">01</span>
-            <h2 class="main-title">Порхает как бабочка, жалит как пчела!</h2>
-            <p class="text">
+          <div class="slider-item-section">
+            <div class="slider-number">
+              01
+            </div>
+            <h2 class="slider-title">Порхает как бабочка, жалит как пчела!</h2>
+            <p class="slider-description text">
               Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
             </p>
-            <a class="main-button" href="#">Подробнее</a>
-            <table class="specification">
-              <tr>
-                <th>800  м</th>
-                <th>50  м</th>
-              </tr>
-              <tr>
-                <td>Дальность полета</td>
-                <td>Радиус поражения</td>
-              </tr>
-            </table>
+            <a class="main-button slider-button" href="#">Подробнее</a>
+            <div class="specification">
+              <div class="specification-item">
+                  <div class="specification-item-title">
+                    800 м
+                  </div>
+                  <div class="specification-item-description">
+                    Дальность полета
+                  </div>
+              </div>
+              <div class="specification-item">
+                <div class="specification-item-title">
+                  50 м
+                </div>
+                <div class="specification-item-description">
+                  Радиус поражения
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
-        <!-- <div class="slider second-slide"></div>
-        <div class="slider third-slide"></div> -->
+
+        <div class="slider-item">
+          <div class="slider-img">
+            <img src="images/slider-fitnes-bracelets.png" width="560px" height="560px" alt="Фитнес-браслет">
+          </div>
+          <div class="slider-item-section">
+            <div class="slider-number">
+              02
+            </div>
+            <h2 class="slider-title">Худеем правильно!</h2>
+            <p class="slider-description text">
+              Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+            </p>
+            <a class="main-button slider-button" href="#">Подробнее</a>
+            <div class="specification">
+              <div class="specification-item">
+                  <div class="specification-item-title">
+                    48 часов
+                  </div>
+                  <div class="specification-item-description">
+                    Без подзарядки
+                  </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+
+
+
+        <div class="slider-item">
+          <div class="slider-img">
+            <img src="images/slider-selfie-stick.png" width="560px" height="560px" alt="Палка для селффи">
+          </div>
+          <div class="slider-item-section">
+            <div class="slider-number">
+              03
+            </div>
+            <h2 class="slider-title">Делай селфи, как Бен Стиллер! </h2>
+            <p class="slider-description text">
+              Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+            </p>
+            <a class="main-button slider-button" href="#">Подробнее</a>
+            <div class="specification">
+              <div class="specification-item">
+                  <div class="specification-item-title">
+                    8,5 м
+                  </div>
+                  <div class="specification-item-description">
+                    Длина палки
+                  </div>
+              </div>
+              <div class="specification-item">
+                <div class="specification-item-title">
+                  5 кг
+                </div>
+                <div class="specification-item-description">
+                  Вес палки
+                </div>
+              </div>
+              <div class="specification-item">
+                <div class="specification-item-title">
+                  Карбон
+                </div>
+                <div class="specification-item-description">
+                  Материал
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
 
         <!-- <div class="slider-navigation">
           <button><img src="images/icons-arrow-left.svg" width="20px" height="60px"></button>
@@ -104,37 +192,37 @@
           <li class="category-card">
             <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-vr.png" width="160" height="160" alt="Очки виртуальной реальности">
-              <p>Виртуальная реальность</p>
+              <p class="category-card-text">Виртуальная реальность</p>
             </a>
           </li>
           <li class="category-card">
             <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-monopods-for-selfie.png" width="160" height="160" alt="Монопод для селфи">
-              <p>Моноподы для селфи</p>
+              <p class="category-card-text">Моноподы для селфи</p>
             </a>
           </li>
           <li class="category-card">
             <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-action-cameras.png" width="160" height="160" alt="Экшн-камера">
-              <p>Экшн-камеры</p>
+              <p class="category-card-text">Экшн-камеры</p>
             </a>
           </li>
           <li class="category-card">
             <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-fitness-bracelets.png" width="160" height="160" alt="Фитнес-браслет">
-              <p>Фитнес-браслеты</p>
+              <p class="category-card-text">Фитнес-браслеты</p>
             </a>
           </li>
           <li class="category-card">
             <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-smart-watch.png" width="160" height="160" alt="Умные часы">
-              <p>Умные часы</p>
+              <p class="category-card-text">Умные часы</p>
             </a>
           </li>
           <li class="category-card">
             <a class="category-card-link" href="#">
               <img class="category-card-image" src="images/category-quadrocopter.png" width="160" height="160" alt="Квадрокоптер">
-              <p>Квадрокоптеры</p>
+              <p class="category-card-text">Квадрокоптеры</p>
             </a>
           </li>
         </ul>
@@ -148,10 +236,10 @@
             <button class="advantage-button" type="button">Гарантия</button>
             <button class="advantage-button" type="button">Кредит</button>
           </div>
-          <div class="advantage-item">
-            <div class="advantage-delivery">
+          <div class="advantage-item-wrapper">
+            <div class="advantage-item advantage-item-active">
               <div>
-                <h3 class="main-title">Доставка</h3>
+                <h3 class="main-title main-title--mt">Доставка</h3>
                 <p class="text">
                   Мы с удовольствием доставим ваш товар прямо
                   к вашему подъезду совершенно бесплатно! Ведь
@@ -163,8 +251,8 @@
               </div>
             </div>
 
-            <!-- <div class="advantage-guarantee"></div>
-            <div class="advantage-credit"></div> -->
+            <!-- <div class="advantage-item"></div>
+            <div class="advantage-item"></div> -->
 
           </div>
         </div>
@@ -183,21 +271,21 @@
       <section class="section-contact wrapper">
         <div class="contacts">
           <img src="images/icons-line-black.svg" width="84px" height="7px">
-          <h2 class="main-title">О нас</h2>
-          <p class="text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p class="text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-          <ul class="delivery-item">
-            <li class="delivery-list"><span>Меловые линии</span></li>
-            <li class="delivery-list"><span>СДИК</span></li>
-            <li class="delivery-list"><span>ТоксБерри</span></li>
+          <h2 class="main-title contact-title">О нас</h2>
+          <p class="text contacts-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="text contacts-text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+          <ul class="delivery-list">
+            <li class="delivery-item"><span>Меловые линии</span></li>
+            <li class="delivery-item"><span>СДИК</span></li>
+            <li class="delivery-item"><span>ТоксБерри</span></li>
           </ul>
-          <a class="main-button" href="#">Подробнее о нас</a>
+          <a class="main-button section-contact-button" href="#">Подробнее о нас</a>
         </div>
 
         <div class="contacts">
           <img src="images/icons-line-black.svg" width="84px" height="7px">
           <h2 class="main-title">Контакты</h2>
-          <p class="text">Вы можете забрать товар сами, заехав в наш офис.
+          <p class="text contacts-text">Вы можете забрать товар сами, заехав в наш офис.
             Заодно сможете проверить работоспособность покупки. </p>
           <h3 class="subtitle">Интернет-магазин «Девайс»</h3>
             <address class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
@@ -207,15 +295,15 @@
             <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
           </ul>
-          <a class="main-button" href="#">Напишите нам</a>
+          <a class="main-button section-contact-button" href="#">Напишите нам</a>
         </div>
       </section>
 
       <section class="section-distribution">
-        <div class="wrapper">
+        <div class="section-distribution-wrapper wrapper">
           <div class="section-distribution-top">
-            <h2 class="main-title">Подпишитесь на рассылку</h2>
-            <p class="text">Еженедельный дайджест с обзорами новинок,
+            <h2 class="main-title section-distribution-title">Подпишитесь на рассылку</h2>
+            <p class="text section-distribution-text">Еженедельный дайджест с обзорами новинок,
               длительными тест-драйвами, распаковками,
               а также акции, спецпредложения и вот это вот всё. </p>
           </div>
@@ -235,7 +323,7 @@
 
 
     <footer class="page-footer">
-      <div class="wrapper">
+      <div class="page-footer-wrapper wrapper">
         <img class="logo logo-footer" src="images/logo-device-yellow.svg" width="145px" height="36px" alt="Логотип интернет магазина Device">
         <div class="footer-column">
           <div class="footer-section footer-section-left">
